# workerd-oxc

./: .gitignore  Cargo.toml  FINDINGS.md  README.md  STATUS.md  justfile  package-lock.json  package.json
.github/workflows/: ci.yml  publish.yml
examples/worker-loader/: README.md  wrangler.jsonc
examples/worker-loader/src/: index.ts
native/abi/: Cargo.toml
native/abi/src/: lib.rs
native/analyze/: Cargo.toml
native/analyze/src/: diagnostics.rs  lib.rs  payload.rs  source.rs
native/analyze/src/facts/: bindings.rs  imports_exports.rs  jsx.rs  literal.rs  mod.rs  references.rs  scopes.rs
native/oxc-direct-parser/: Cargo.toml
native/oxc-direct-parser/src/: lib.rs
native/parser/: Cargo.toml
native/parser/src/: lib.rs
native/transform/: Cargo.toml
native/transform/src/: lib.rs
scripts/: check-dist.mjs  check-pack.mjs  check-packed-worker.mjs  wasm-info.mjs
src/: analyze-payload.ts  analyze.ts  build-id.ts  diagnostics.ts  index.ts  oxc.ts  parser.ts  source-map.ts  source.ts  transform.ts  types.ts
src/abi/: diagnostics.ts  instance.ts  memory.ts  operation.ts  result.ts  utf8.ts
src/oxc/: ast.ts  direct-parser-runtime.ts  module-graph.ts  package-resolver.ts  session.ts  transform.ts
src/wasm/: oxc-direct-parser.wasm  parser.wasm  transform.wasm
tests/bundle-shape/entries/: oxc-ast.ts  oxc-transform.ts
tests/node/: analyze-payload.test.ts  api-types.test.ts  artifact-shape.test.ts  diagnostics.test.ts  direct-parser-artifact.test.ts  package-native-import.test.ts  package-shape.test.ts  wrangler-bundle-shape-helpers.ts  wrangler-bundle-shape.test.ts
tests/workers/: analyze.test.ts  build-id.test.ts  diagnostics.test.ts  env.d.ts  helpers.ts  lifecycle.test.ts  oxc-direct-parser.test.ts  parse.test.ts  source-map-helpers.ts  source-map.test.ts  transform.test.ts  worker-loader-example.test.ts
tests/workers/measurements/: oxc-operational-helpers.ts  oxc-operational-measurements.test.ts
tests/workers/oxc/: incremental-session.test.ts  oxc-wasmkernel.test.ts  package-resolver.test.ts
