[package]
name = "workerd_oxc_direct_parser"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
oxc_allocator = "0.138.0"
oxc_ast = { version = "0.138.0", features = ["serialize"] }
oxc_ast_visit = { version = "0.138.0", features = ["serialize"] }
oxc_parser = "0.138.0"
oxc_span = { version = "0.138.0", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
